added another blog
added another blog

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
  
         </p>
     </div>
+    <div class="blog">
+        <h2>adding another blog</h2>
+        <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean
+            collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.
+ 
+        </p>
+    </div>
 </body>
 
 </html>
