--- a/index.html
+++ b/index.html
@@ -1,45 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyCSSSite</title>
+    <title>Home page</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <div class="blog">
-        <h2>Adding Makeup to HTML </h2>
-        <p>I am going to add some style to HTML </p>
-        <!--<img src="image/bangladesh.jpg" alt="" width="600" height="400">-->
-    </div>
-
-
-
-    <div class="blog">
-        <H2>Selector lists</H2>
-        <p>If you have more than one thing which uses the same CSS then the individual selectors can be combined into a
-            selector list so that the rule is applied to all of the individual selectors. For example, if I have the
-            same CSS for an h1 and also a class of .special, I could write this as two separate rules.
-        </p>
-    </div>
-
-
-    <div class="blog">
-        <h2>Type selector</h2>
-        <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean
-            collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.
- 
-        </p>
-    </div>
-    <div class="blog">
-        <h2>adding another blog</h2>
-        <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean
-            collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.
- 
-        </p>
-    </div>
+    <section>
+        <h1>Learning and climbing position high</h1>
+        <a href="page2.html"><h2>Page2</h2></a>
+        <a href="power.html"><h2>Power Page</h2></a>
+    </section>
+    <section>
+        <h2>Home work</h2>
+<ul>
+    <li>Over flow</li>
+    <li>Media query</li>
+    <li>Transition</li>
+    <li>Animation</li>
+    <li>Advanced CSS Selector</li>
+</ul>
+    </section>
+    <section class="container">
+        <div id="first"></div>
+        <div id="second"></div>
+        <div id="third"></div>
+        <div id="forth"></div>
+        <div id="fifth"></div>
+        <div id="sixth"></div>
+    </section>
+    
 </body>
-
 </html>
